--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "license": "MIT",
     "dependencies": {
         "@nuxt/typescript-runtime": "^0.4.6",
+        "bootstrap-vue": "^2.20.1",
         "express": "^4.16.4",
         "express-useragent": "^1.0.13",
+        "fast-csv": "^4.3.6",
         "get-port": "^5.1.1",
         "nuxt-class-component": "^1.3.0",
         "wait-on": "^5.0.0"
